# data-structure-and-algorithms

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE.md  Makefile.am  NEWS  README.md  configure.ac
binarytree/: binarytree.c  binarytree.h  test.c
hashtable/: hashtable  hashtable.c
linkedlist/: linkedlist.c  linkedlist.h  test.c
src/: Makefile.am  array.c  array.h  hashtable.c  hashtable.h  main.c
src/hashtable/: Makefile.am  hashtable.c  hashtable.h  main.c
src/linkedlist/: Makefile.am  main.c
