# Ref: https://earthly.dev/blog/autoconf/
# Ref: https://opensource.com/article/19/7/introduction-gnu-autotools
# AC_INIT to name application, version an maintainer
AC_INIT([data-structure-and-algorithms], [0.1], [charles.low@pm.me])
# init automake to use together with autoconf
AM_INIT_AUTOMAKE
# specify compiler
AC_PROG_CC

# tell autoconf to find Makefile.in and replace placeholders accordingly
AC_CONFIG_FILES([Makefile])


# output the final configure script
AC_OUTPUT